tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__MoreAlgaeUses-wgxwGsMBScCIIWzrgyfb8w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14051593403555634163,
  "prerequisites": [
    860,
    16740244179246120339
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have Titanium, why not make about 79 EV machine casings for some cheap Ammonia? The ratio is about 50mb to one Golden-Brown Algae. At EV you have a 10% chance to get 8 about every 30 seconds. It also does not require a Chemical Plant, but it will require an MV Assembler and an MV Fluid Extractor at minimum.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "More Algae Uses",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    860,
    16740244179246120339
  ],
  "rewards": [],
  "tasks": []
}
