tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__NaquadahAlloyCoi-AAAAAAAAAAAAAAAAAAAB3Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 477,
  "prerequisites": [
    476
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This one is optional now. But still very useful and recommended.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lNaquadah Alloy Coil Upgrade",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    476
  ],
  "rewards": [],
  "tasks": []
}
