tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__NeutronAccelerat-AAAAAAAAAAAAAAAAAAALeg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2938,
  "prerequisites": [
    2936
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It is used to accelerate the NKE. You just need to connect a cable to it and it will keep consuming the energy.\n\n[note]PS: You can use a controller cover to stop it.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lNeutron Accelerator",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2936
  ],
  "rewards": [],
  "tasks": []
}
