tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__NeutronSensor-AAAAAAAAAAAAAAAAAAALeQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2937,
  "prerequisites": [
    2936
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The sensor will send redstone signals according to the NKE of the Neutron Activator.\n\nIt works like a cover: enter the threshold value in eV, and it will emit a redstone signal when the NKE is at least as high as the threshold.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lNeutron Sensor",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2936
  ],
  "rewards": [],
  "tasks": []
}
