tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__NichromeCoilUpgr-AAAAAAAAAAAAAAAAAAAATw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 79,
  "prerequisites": [
    81,
    78
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To reach 3600K so you can process higher tier materials like tungsten, you need nichrome heating coils.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lNichrome Coil Upgrade",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    81,
    78
  ],
  "rewards": [],
  "tasks": []
}
